# ICPlearn

./: .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_OPTIONS.md  README.md  README_ICP.md  REPOSITORY_CHECKLIST.md  add_update_stake.py  pyproject.toml  run_tests.sh  test_current_deployment.py  test_gamification.py  test_integration.py  test_services.py  test_stable_storage.did
backend/: DEPLOYMENT_STATUS.md  DeAI.md  README.md  add_genesis_nft.py  dfx.json  fix_gamification.py  fix_kybra.py  fix_neuro_stake.py  test_api.py  test_bitcoin_reward.py  test_stable_storage.py
backend/docs/: AI_FEATURES.md  CANDID_UI_ACCESS.md  DEVELOPMENT_STATUS.md  HYBRID_AI_IMPLEMENTATION.md  PROJECT_SUMMARY.md
backend/src/icplearn_backend/: icplearn_backend.did  main.py  main.py.backup  main_additions.py  main_backup.py  main_incremental.py  main_minimal.py  main_minimal_plus.py  main_step_by_step.py
backend/tests/: README.md  run_all_tests.py  test_ai_integration.py  test_all_services.py  test_bitcoin_reward_direct.py  test_minimal.py  test_services.py  test_simple.py  test_user_management.py
frontend/: README.md  dfx.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/canisters/: page.tsx
frontend/app/community/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/docs/: DocsContent.tsx  DocsSidebar.tsx  layout.tsx  page.tsx
frontend/docs/: FRONTEND_ENHANCEMENTS.md  INTEGRATION_GUIDE.md
frontend/hooks/: useICPBackend.ts
frontend/lib/: icp-backend.ts
src/icplearn_backend/: main.py
(+92 files in other folders)
