[tool.poetry]
name = "icplearn_icp"
version = "0.1.0"
description = "ICPlearn backend ported to Internet Computer Protocol"
authors = ["ICPlearn Team"]

[tool.poetry.dependencies]
python = "^3.10"
kybra = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
